Added all simple operations and compiler basic logic.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,6 @@ ${CMAKE_BINARY_DIR}/utils/version.h
 include_directories(${CMAKE_BINARY_DIR}/utils)
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/version.h.in ${CMAKE_CURRENT_BINARY_DIR}/version.h @ONLY)
-set(SOURCE_FILES main.cpp utils/ArgumentParser.cpp utils/Settings.cpp)
+set(SOURCE_FILES main.cpp utils/ArgumentParser.cpp utils/Settings.cpp structures/Commands.h vm/VirtualMachine.cpp vm/VirtualMachine.h compiler/Compiler.cpp compiler/Compiler.h vm/Element.cpp vm/Element.h)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable(VM ${SOURCE_FILES})
