Add support for Visual Studio

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,10 @@ include_directories(${CMAKE_BINARY_DIR}/utils)
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/version.h.in ${CMAKE_CURRENT_BINARY_DIR}/version.h @ONLY)
 set(SOURCE_FILES main.cpp utils/ArgumentParser.cpp structures/Commands.h vm/VirtualMachine.cpp vm/VirtualMachine.h compiler/Compiler.cpp compiler/Compiler.h vm/Element.cpp vm/Element.h utils/Regex.h)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+if(WIN32)
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std:c++17")
+endif(WIN32)
+if(UNIX)
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+endif(UNIX)
 add_executable(VM ${SOURCE_FILES})
